--- a/assignment/VideoPlayer/app/src/main/res/layout/activity_main.xml
+++ b/assignment/VideoPlayer/app/src/main/res/layout/activity_main.xml
@@ -4,27 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/CL"
+    android:keepScreenOn="true"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <VideoView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/VV"
+        />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="161dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="100dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+
+        <Button
+            android:id="@+id/bt_start"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/start"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:alpha="0.5"
+            />
+
+        <SeekBar
+            android:id="@+id/sb_video"
+            android:layout_width="match_parent"
+            android:layout_height="53dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="130dp"
+            app:layout_constraintLeft_toRightOf="@+id/bt_start"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:alpha="0.5" />
+        <TextView
+            android:id="@+id/tv_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            app:layout_constraintTop_toTopOf="@id/bt_start"
+            app:layout_constraintLeft_toRightOf="@+id/sb_video"
+            android:text="00:00:00/00:00:00"/>
+
 
 </android.support.constraint.ConstraintLayout>
