--- a/assignment/VideoPlayer/app/src/main/res/layout/activity_ture_main_activity.xml
+++ b/assignment/VideoPlayer/app/src/main/res/layout/activity_ture_main_activity.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="bt1"
+        android:text="播放安装包内的测试视频"
         tools:layout_editor_absoluteX="183dp"
         tools:layout_editor_absoluteY="329dp" />
 </android.support.constraint.ConstraintLayout>
